--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "rp2040-project-template"
+name = "lidar"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
@@ -18,6 +18,7 @@ rp-pico = "0.9"
 usb-device = "0.3.1"
 usbd-serial = "0.2.1"
 heapless = "0.7.16"
+lib = {path = "../lib"}
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.8"
 
